--- a/src/app/dashboard/views/map-details/map-details.component.html
+++ b/src/app/dashboard/views/map-details/map-details.component.html
@@ -11,7 +11,7 @@
       <input
         class="input input-bordered"
         disabled
-        [value]="fullData?.locationName"
+        [value]="fullData?.location.name"
       />
     </div>
   </div>
@@ -35,7 +35,7 @@
       <input
         class="input input-bordered"
         disabled
-        [value]="fullData?.prescriptionCount"
+        [value]="fullData?.drugUsersCount"
       />
     </div>
   </div>
